--- a/epic_event/templates/user/user_snippet.html
+++ b/epic_event/templates/user/user_snippet.html
@@ -1,4 +1,5 @@
     <div class="snippet">
         <p>username : {{ user.username }}</p>
         <p>team : {{ user.team }}</p>
+        <p>email : {{ user.email }}</p>
     </div>
