--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Inscrivez-vous maintenant</h2>
-    <a href="{% url 'signup' %}"><button>S'inscrire</button></a>
+{#    <h2>Inscrivez-vous maintenant</h2>#}
+{#    <a href="{% url 'login' %}"><button>S'inscrire</button></a>#}
     <h2>Connectez-vous</h2>
     <form method="post">
         {{ form.as_p }}
