--- a/epic_event/templates/user/user_detail.html
+++ b/epic_event/templates/user/user_detail.html
@@ -5,11 +5,9 @@
 
 <h1>Profile - {{ user }}</h1>
 
-<form action="{% url 'user_detail' pk=user.pk %}" method="POST">
+<form action="{% url 'user_detail' pk=user.pk %}" method="PUT">
     {% csrf_token %}
     {% render_form serializer %}
     <input type="submit" value="Save">
 </form>
-
-<p>user_form</p>
 {% endblock content %}
