--- a/static/app.css
+++ b/static/app.css
@@ -19,7 +19,7 @@ h2 {
     color : #f2f2f2;
     width:100%;
     z-index: auto;
-    height : 120px;
+    min-height : 120px;
 }
 
 
@@ -53,7 +53,7 @@ h2 {
     padding: 10px 10px 10px 10px;
 }
 
-#welcome {
+.welcome {
     position : absolute;
     object-position: center ;
     color : white;
@@ -324,4 +324,34 @@ h2 {
   color: white;
     border-radius: 5px;
     margin-top: 5px;
+}
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  object-position: center;
+  z-index: 1; /* Sit on top */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  vertical-align: center;
+}
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #101010;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
 }
