--- a/epic_event/templates/event/event_snippet.html
+++ b/epic_event/templates/event/event_snippet.html
@@ -1,8 +1,8 @@
     <div class="snippet">
         <p class = "date">{{ event.date_updated }}</p>
         <p>customer : {{ event.customer_id }}</p>
-        <p>attendees : {{ attendees }}</p>
-        <p>notes : {{ notes }}</p>
+        <p>attendees : {{ event.attendees }}</p>
+        <p>notes : {{ event.notes }}</p>
         {% if user.team != 'sales' %}
             <div class = "edit-button">
                 <a href=""><button>Modifier</button></a>
