--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <div class="topnav">
             <h1>Epic Event</h1>
 
-            <img class ="logo" src="{% static 'images/logo_litr_white_nameless.png'%}">
+            <img class ="logo" src="{% static 'images/LogoEpicEvent.png'%}">
             {% if user.is_authenticated %}
 
                 {% if user.profile_photo %}
