--- a/epic_event/templates/customer/customer_list.html
+++ b/epic_event/templates/customer/customer_list.html
@@ -10,7 +10,23 @@
 
     <div class="grid-container">
     {% for customer in customers %}
-        {% include 'customer/../contract/contract_snippet.html' with customer=customer %}
+        {% if  customer.status == 'prospect' %}
+            <div class="snippet" style="background-color:rgba(168,255,118,0.82)">
+            {% include 'customer/customer_snippet.html' with customer=customer %}
+            </div>
+        {% elif customer.status == 'ongoing' %}
+            <div class="snippet" style="background-color:#7983da">
+            {% include 'customer/customer_snippet.html' with customer=customer %}
+            </div>
+        {% elif customer.status == 'blacklisted' %}
+            <div class="snippet" style="background-color:#69756b">
+            {% include 'customer/customer_snippet.html' with customer=customer %}
+            </div>
+        {% else %}
+            <div class="snippet">
+            {% include 'customer/customer_snippet.html' with customer=customer %}
+            </div>
+        {% endif %}
         {% if request.user.team == management %}
             <div class = "edit-button">
                 <a href="{% url 'customer_detail' customer.id %}"><button>Modifier</button></a>
