--- a/epic_event/templates/customer/customer_create.html
+++ b/epic_event/templates/customer/customer_create.html
@@ -10,4 +10,5 @@
     {% render_form serializer %}
     <input type="submit" value="Save">
 </form>
+    {{ request.user.team }}
 {% endblock content %}
