--- a/epic_event/templates/contract/contract_create.html
+++ b/epic_event/templates/contract/contract_create.html
@@ -5,7 +5,7 @@
 
 <h1>Create a new contract</h1>
 
-<form action="{% url 'customer_contract_create' 3 %}" method="POST">
+<form action="{% url 'contract_create' customer.id %}" method="POST">
     {% csrf_token %}
     {% render_form serializer %}
     <input type="submit" value="Save">
