--- a/epic_event/templates/customer/customer_detail.html
+++ b/epic_event/templates/customer/customer_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1>Customer - {{ customer.id }}</h1>
+<h1>Customer - {{ customer }}</h1>
  <!-- Rectangular switch -->
 <label class="switch">
   <input type="checkbox">
@@ -19,17 +19,18 @@
 <form method="POST">
     {% csrf_token %}
     {% render_form serializer %}
-    <input type="submit" value="Save">
+    <input type="submit" name="update_customer" value="Save">
 </form>
+
 {% if request.user.team == "management" %}
+{#<a href="{% url 'customer_delete' customer.id %}"><button>Delete customer</button></a>#}
+
 <div class="submit-form">
     <form method="POST" enctype="multipart/form-data">
         {{ delete_form }}
         {% csrf_token %}
-        <button type="submit" >Supprimer</button>
+        <input type="submit" name="delete_customer" value="Delete">
     </form>
     </div>
     {% endif %}
-<p>customer_form</p>
-    <p>{{ request.user.team }}</p>
 {% endblock content %}
