--- a/epic_event/templates/event/event_create.html
+++ b/epic_event/templates/event/event_create.html
@@ -5,7 +5,7 @@
 
 <h1>Create a new event</h1>
 
-    <form action="{% url 'event_create' %}" method="POST">
+    <form action="{% url 'event_create_untied' %}" method="POST">
     {% csrf_token %}
     {% render_form serializer %}
     <input type="submit" value="Save">
