--- a/epic_event/templates/event/event_detail.html
+++ b/epic_event/templates/event/event_detail.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load rest_framework %}
 
-</body>
-</html>
+{% block content %}
+
+<h1>Event - {{ event }}</h1>
+ <!-- Rectangular switch -->
+<label class="switch">
+  <input type="checkbox">
+  <span class="slider"></span>
+</label>
+
+<!-- Rounded switch -->
+<label class="switch">
+  <input type="checkbox">
+  <span class="slider round"></span>
+</label>
+
+<form method="POST">
+    {% csrf_token %}
+    {% render_form serializer %}
+    <input type="submit" name="update_event" value="Save">
+</form>
+
+{% if request.user.team == "management" %}
+{#<a href="{% url 'customer_delete' customer.id %}"><button>Delete customer</button></a>#}
+
+<div class="submit-form">
+    <form method="POST" enctype="multipart/form-data">
+        {{ delete_form }}
+        {% csrf_token %}
+        <input type="submit" name="delete_event" value="Delete">
+    </form>
+    </div>
+    {% endif %}
+{% endblock content %}
