Commit before selecting

--- a/epic_event/templates/contract/contract_create.html
+++ b/epic_event/templates/contract/contract_create.html
@@ -8,7 +8,7 @@
 <form action="{% url 'contract_create' customer.id %}" method="POST">
     {% csrf_token %}
     {% render_form serializer %}
-    <input type="submit" value="Save">
+    <input type="submit" name="create" value="Save">
 </form>
 
 {% endblock content %}
