--- a/static/app.css
+++ b/static/app.css
@@ -163,49 +163,46 @@ h2 {
     text-align: center;
     border: 2px solid #01094d;
     border-radius: 5px;
-    background-color: #f6f6e5;
+    background-color: #dadada;
     color: #000000;
 }
 
 .snippet {
+    min-height: 12em;
     border: 2px solid #01094d;
     border-radius: 5px;
-    background-color: #faf0dc;
+    background-color: rgb(217, 217, 217);
     color: #000000;
     text-align: left;
     margin: 10px;
     padding: 10px;
-}
-
-.snippet .intro{
-    padding: 0px;
-    margin: 0px;
-}
-.snippet .date{
-    position : relative;
-    object-position: top right;
-    text-align: right;
-    font-size: 0.8em;
-    padding: 0px;
-    margin: 0px;
+    position: relative;
 }
 
 .snippet .titre {
     position : relative;
     object-position : center;
-    font-size : 1.5em;
+    font-size : 1.3em;
     text-transform:capitalize;
     padding: 0px;
     margin: 0px;
 }
 
-/*.snippet a {*/
-/*    text-decoration: inherit;*/
-/*    color: black;*/
-/*    text-underline: none;*/
-/*}*/
+.snippet .customer-banner {
+    position: absolute;
+    top : 0;
+    right: 0;
+    padding: 0;
+    height: 3em;
+}
 
-
+.snippet .date{
+    position : absolute;
+    text-align: right;
+    font-size: 0.8em;
+    right : 0;
+    top: 3em
+}
 
 .snippet .book-cover {
     object-position: left;
@@ -217,16 +214,66 @@ h2 {
     border: 1px;
 }
 
-.snippet .customer-banner {
-    padding: 0;
-    height: 3em;
-}
 
 
 .snippet button {
-    position:absolute;
-    right: 20%
+    display: block;
+    right:5%;
+    bottom: 0
 }
+
+.snippet .customer-buttons {
+    position:absolute;
+    display: block;
+    right: 0;
+    bottom: 0;
+}
+
+.snippet .customer-buttons  button{
+    width : 100%;
+    min-height: 3em;
+    background-color : #ffffff;
+    text-align: center;
+    border-radius: 5px;
+    border-width: 1px;
+}
+
+.snippet .customer-buttons  img{
+    height: 1.5em;
+    display: block;
+    margin: 0 auto;
+}
+
+
+.snippet .td-infos {
+    font-size: 0.8em;
+    font-style: italic;
+}
+
+.snippet table {
+    min-height: 12em;
+}
+/*.snippet .ongoing-contracts {*/
+/*    position:absolute;*/
+/*    display: block;*/
+/*    right:0;*/
+/*    bottom: 0;*/
+/*}*/
+
+/*.snippet .add-contract {*/
+/*    position:absolute;*/
+/*    display: block;*/
+/*    right:0;*/
+/*    bottom: 0;*/
+/*}*/
+
+/*.snippet .customer-detail {*/
+/*    position:absolute;*/
+/*    display: block;*/
+/*    right:0;*/
+/*    bottom: 0;*/
+/*}*/
+
 
 .snippet .edit-button button {
     position:relative;
@@ -277,6 +324,7 @@ h2 {
 
 .snippet button:hover {
     background-color: #796dd7;
+    cursor: pointer;
 }
 
 .submit-form button:hover {
@@ -436,9 +484,4 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
-}
-
-.customer-banner {
-    position: relative;
-    right:0;
 }
