--- a/epic_event/templates/customer/customer_read_only.html
+++ b/epic_event/templates/customer/customer_read_only.html
@@ -64,7 +64,7 @@
     <div class=customer-buttons>
 
             <a href="{% url 'contract_list' %}"><button><img src="{% static 'images/contrat_list.png'%}">Ongoing contracts</button></a>
-                <a href="{% url 'customer_detail' customer.id %}"><button>Customer detail</button></a>
+                <a href="{% url 'customer_event_list' customer.id %}"><button>Events associated</button></a>
     </div>
 </div>
 {% endblock content %}
