--- a/epic_event/templates/event/event_create.html
+++ b/epic_event/templates/event/event_create.html
@@ -4,10 +4,9 @@
 {% block content %}
 
 <h1>Create a new event</h1>
-
-    <form action="{% url 'event_create_untied' %}" method="POST">
+    <form action="{% url 'event_create' contract.id %}" method="POST">
     {% csrf_token %}
     {% render_form serializer %}
-    <input type="submit" value="Save">
+    <input type="submit" name="create" value="Save">
 </form>
 {% endblock content %}
