--- a/static/app.css
+++ b/static/app.css
@@ -200,8 +200,9 @@ h2 {
     position : absolute;
     text-align: right;
     font-size: 0.8em;
+    font-style: italic;
     right : 0;
-    top: 3em
+    top: 3.2em
 }
 
 .snippet .book-cover {
@@ -213,7 +214,6 @@ h2 {
 .snippet .edit-button {
     border: 1px;
 }
-
 
 
 .snippet button {
