--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,8 @@
 
                 <div class="submit-form">
                 <form method="POST" enctype="multipart/form-data">
-                    <input type="text" name="searchbar" placeholder="Search.."><button>search</button>
+                    <input type="text" name="searchbar" placeholder="Search..">
+                    <button type="submit"><i class="fa fa-search"></i></button>
                     {% csrf_token %}
                 </form>
                 </div>
