--- a/epic_event/templates/contract/contract_create.html
+++ b/epic_event/templates/contract/contract_create.html
@@ -5,6 +5,7 @@
 
 <h1>Create a new contract</h1>
 
+    {{ serializer}}
 <form action="{% url 'contract_create' customer.id %}" method="POST">
     {% csrf_token %}
     {% render_form serializer %}
