commit before scinding forms and serializers in 2

--- a/epic_event/templates/customer/customer_create.html
+++ b/epic_event/templates/customer/customer_create.html
@@ -8,6 +8,6 @@
 <form action="{% url 'customer_create' %}" method="POST">
     {% csrf_token %}
     {% render_form serializer %}
-    <input type="submit" name="create" value="Save">
+    <input type="submit" name="create_customer" value="Save">
 </form>
 {% endblock content %}
