--- a/epic_event/templates/customer/customer_snippet.html
+++ b/epic_event/templates/customer/customer_snippet.html
@@ -45,7 +45,7 @@
             </tr>
             <tr>
                 <td class="td-infos">email</td>
-                <td>{{ customer.mail }}</td>
+                <td>{{ customer.email }}</td>
             </tr>
             <tr>
                 <td class="td-infos">date_created</td>
